@@ -1,7 +1,8 @@
 ------------------------------------------------------------------------------
-  qPython 1.0.0 [2015.04.08]
+  qPython 1.0.0 [2015.04.10]
 ------------------------------------------------------------------------------
 
+  - Improve type detection for pandas.Series serialization 
   - Fix: bug during handshake with blank username/password 
 
 ------------------------------------------------------------------------------
